custom media size patch + bug fix.

This implements the CustomMediaSize as discussed; on the way I also found an
old bug with the pxl utility code which was just written but not used (until
now). See comments within. Fixes bug 690827.

git-svn-id: http://svn.ghostscript.com/ghostscript/trunk@10231 a1074d23-0009-0410-80fe-cf8c14f379e6